@@ -8,8 +8,8 @@ then
     echo "JGROUPS_HOME is not set! Setting it to $JGROUPS_HOME"
 fi
 
-
-LIB=$JGROUPS_HOME/lib
+export JGROUPS_HOME
+export LIB=$JGROUPS_HOME/lib
 
 CP=$JGROUPS_HOME/classes:$JGROUPS_HOME/conf
 
@@ -33,20 +33,33 @@ if [ -f $HOME/logging.properties ]; then
 fi;
 
 #JG_FLAGS="-Djgroups.bind_addr=match-address:192.168.1.*"
-FLAGS="-server -Xmx1G -Xms500M"
-GC="-XX:+UseG1GC"
+FLAGS="-server -Xmx1G -Xms500m -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true"
+
+#FLAGS="$FLAGS -XX:+PrintCompilation -XX:+UnlockDiagnosticVMOptions -XX:+PrintInlining -XX:+LogCompilation"
+
+#GC="-Xlog:gc:gc-$PPID.log"
 
 #FLAGS="$FLAGS -Duser.language=de"
 
 #FLAGS="$FLAGS -Djdk.defaultScheduler.parallelism=2"
 
-#FLAGS="$FLAGS -Djava.util.concurrent.ForkJoinPool.common.parallelism=1"
+# Set the number of platform threads to be used by the ForkJoinPool for virtual threads
+# FLAGS="$FLAGS -Djdk.virtualThreadScheduler.parallelism=12"
 
-JMX="-Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=localhost"
+#JMX="-Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=localhost"
 
 #java -Xrunhprof:cpu=samples,monitor=y,interval=5,lineno=y,thread=y -classpath $CP $LOG $JG_FLAGS $FLAGS $JMX  $*
 
 #DEBUG="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5000"
 
-java -cp $CP $DEBUG $LOG $GC $JG_FLAGS $FLAGS $JMX $JMC  $*
+# SSL_FLAGS="-Djavax.net.debug=ssl:handshake"
+#Z1="-XX:+UseZGC -XX:+ZGenerational"
+
+# Dump with jcmd <pid> Thread.dump_to_file <filename>
+# DUMP_VTHREADS=-Djdk.trackAllThreads=true
+
+# Dump when virtual threads are pinned on a carrier thread
+# FLAGS="$FLAGS -Djdk.tracePinnedThreads=full"
+
+java  $GC $DUMP_VTHREADS $Z1 -cp $CP $SSL_FLAGS $DEBUG $LOG $JG_FLAGS $FLAGS $JMX $JMC $*
 
